--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,6 +15,8 @@ FROM willhallonline/ansible:ubuntu
 #    && rm -rf /var/lib/apt/lists/*
 # ENV DEBIAN_FRONTEND=dialog
 
+ENV ANSIBLE_CONFIG=/ansible/ansible.cfg
+
 # Set up auto-source of workspace for ros user
 ARG WORKSPACE
 # RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> /home/ros/.bashrc
