first draft of SSH and formant working in container but not the cleanest

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,18 +2,20 @@ FROM willhallonline/ansible:ubuntu
 # From https://github.com/willhallonline/docker-ansible
 # and https://github.com/athackst/vscode_ros2_workspace
 
+#https://docs.formant.io/reference/fctl
+ENV DEBIAN_FRONTEND=noninteractive
+RUN . /etc/os-release
+RUN apt-key adv --fetch-keys https://keys.formant.io/formant.pub.gpg
+RUN echo "deb https://repo.formant.io/formant/debian jammy main" | tee -a /etc/apt/sources.list >/dev/null
+RUN apt-get update \
+   && apt-get -y install --no-install-recommends fctl \
+   #
+   # Clean up
+   && apt-get autoremove -y \
+   && apt-get clean -y \
+   && rm -rf /var/lib/apt/lists/*
 
-# ** [Optional] Uncomment this section to install additional packages. **
-#
-# ENV DEBIAN_FRONTEND=noninteractive
-# RUN apt-get update \
-#    && apt-get -y install --no-install-recommends <your-package-list-here> \
-#    #
-#    # Clean up
-#    && apt-get autoremove -y \
-#    && apt-get clean -y \
-#    && rm -rf /var/lib/apt/lists/*
-# ENV DEBIAN_FRONTEND=dialog
+ENV DEBIAN_FRONTEND=dialog
 
 ENV ANSIBLE_CONFIG=/ansible/ansible.cfg
 
