make sure community docker is installed - i suspect it already was

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,6 +19,9 @@ ENV DEBIAN_FRONTEND=dialog
 
 ENV ANSIBLE_CONFIG=/ansible/ansible.cfg
 
+COPY ../requirements.yml /tmp/
+RUN ansible-galaxy collection install -r /tmp/requirements.yml
+
 # Set up auto-source of workspace for ros user
 ARG WORKSPACE
 # RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> /home/ros/.bashrc
